# backend

./: .gitignore  README.md  __main__.py  api.py  config.py  database.py  init.py  main.py  pyproject.toml  requirements.txt  testing login and register.txt
.github/workflows/: quality.yml
kagamium/: __init__.py  __main__.py  api.py  auth.py  bootstrap.py  config.py  database.py  main.py  schemas.py
